syntax = "proto3";

package com.example.grpc;

option java_multiple_files = true;
option java_package = "com.example.grpc";

message ResultStatus {
  int32 code = 1;
  string message = 2;
}