syntax = "proto3";

package com.example.grpc;

option java_multiple_files = true;
option java_package = "com.example.grpc";

import "common.proto";

enum Type {
  NORMAL = 0;
  DELETE = 1;
  BLOCK = 2;
}

message EventRequest {
  int64 id = 1;
  Type type =2;
}

message EventResponse {
  ResultStatus status = 1;
  string result = 2;
}